add shopManager models and modified createRoutes
