# koicare/koi_swagger.yaml
@@ -1384,6 +1384,51 @@ paths:
         500:
           description: Server error
 
+  /shopmanager/getAll:
+    get:
+      summary: Get all shop managers
+      description: Retrieves a list of all shop managers. Only accessible by admin.
+      tags:
+        - Authentication
+      security:
+        - bearerAuth: []
+      responses:
+        '200':
+          description: List of shop retrieved successfully
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  type: object
+                  properties:
+                    id:
+                      type: integer
+                    name:
+                      type: string
+                    email:
+                      type: string
+        '404':
+          description: No shop  found
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
+                    example: "No shop found"
+        '500':
+          description: Server error
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  error:
+                    type: string
+                    example: "Error retrieving shop"
+
   /pond/{id}/water-info:
     get:
       tags:
